--- a/Loginproyectvet/Pages/SplashPage.xaml
+++ b/Loginproyectvet/Pages/SplashPage.xaml
@@ -7,7 +7,7 @@
 
         <!-- Imagen centrada en la pantalla (puedes usar tu logo o imagen de presentación) -->
         <Image Source="imageiniciar.jpg"
-               WidthRequest="1000"
+               WidthRequest="900"
                HeightRequest="800"
                AbsoluteLayout.LayoutFlags="PositionProportional"
                AbsoluteLayout.LayoutBounds="0.5,0.5,AutoSize,AutoSize"
@@ -22,6 +22,17 @@
                AbsoluteLayout.LayoutFlags="PositionProportional"
                AbsoluteLayout.LayoutBounds="0.5,0.,AutoSize,AutoSize"
                HorizontalTextAlignment="Center"/>
+
+        <Button Clicked="Button_Clicked"
+                Text="Ingresar"
+                FontSize="Title"
+                BackgroundColor="Salmon"
+                TextColor="Black"
+                     AbsoluteLayout.LayoutBounds="0.5,0.95, AutoSize, AutoSize"
+            AbsoluteLayout.LayoutFlags="PositionProportional" 
+             
+                />
+
 
     </AbsoluteLayout>
 </ContentPage>
